--- a/app/templates/security/_macros.html
+++ b/app/templates/security/_macros.html
@@ -11,9 +11,15 @@
   </div>
 {% endmacro %}
 
-
 {% macro render_field(field) %}
   <p>{{ field(**kwargs)|safe }}</p>
+{% endmacro %}
+
+{% macro render_switch(field, label) %}
+  <div class="custom-control custom-switch">
+    {{ field(**kwargs)|safe }}
+    <label class="custom-control-label" for="{{ field.id }}">{{ label }}</label>
+  </div>
 {% endmacro %}
 
 {% macro render_field_with_ck(field) %}
