prep source lair syc

--- a/app/static/scss/_variables.scss
+++ b/app/static/scss/_variables.scss
@@ -15,7 +15,7 @@ $gray-700: #6e707e !default;
 $gray-800: #5a5c69 !default;
 $gray-900: #3a3b45 !default;
 $black: #000 !default;
-
+$bluegreen: #40798C !default;
 $blue: #4e73dE !default;
 $indigo: #6610f2 !default;
 $purple: #6f42c1 !default;
@@ -27,7 +27,7 @@ $green: #1cc88a !default;
 $teal: #20c9a6 !default;
 $cyan: #36b9cc !default;
 
-$primary:       $orange;
+$primary:       $bluegreen;
 $secondary:     $blue;
 $success:       $green;
 $info:          $cyan;
