--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     {% endblock %}
-    <title>{% block title %}Welcome{% endblock %} - Flaskinni</title>
+    <title>{% block title %}Welcome{% endblock %} - Leagr</title>
     <!-- Bootstrap Core CSS zz123-->
     {% block head_css %}
      <!-- Custom fonts for this template-->
@@ -45,9 +45,9 @@
 
       <!-- Sidebar - Brand -->
       <a class="sidebar-brand d-flex align-items-center justify-content-center" href="{{ url_for('main.index') }}">
-        <img id="logo-small" class="animated--grow-in" src="{{ url_for('static', filename='img/Flaskinni_small.png') }}" alt="Flaskinni logo"/>
+        <img id="logo-small" class="animated--grow-in" src="{{ url_for('static', filename='img/LeagrLogo.png') }}" alt="LeagrLogo logo"/>
         <div class="sidebar-brand-text mx-3">
-          <img id="logo-img" class="animated--fade-in" src="{{ url_for('static', filename='img/Flaskinni.png') }}" alt="Flaskinni logo"/>
+          <img id="logo-img" class="animated--fade-in" src="{{ url_for('static', filename='img/LeagrLogo.png') }}" alt="LeagrLogo logo"/>
         </div>
       </a>
 
