--- a/app/static/scss/custom.scss
+++ b/app/static/scss/custom.scss
@@ -6,6 +6,14 @@
 
 /* ( colors => _variables.scss )  */
 
+body {
+	font-family: 'Oxanium', cursive;
+}
+
+h1, h2, h3, h4, h5, h6 {
+	font-family: 'Teko', sans-serif;
+}
+
 #hero {
 	margin-top: -70px;
 	margin-bottom:50px;
